# prefect-event-router

./: .gitignore  Cargo.toml  Makefile  readme.md  test.json
prefect-testing/: test_flow.py
src/: config.rs  interfaces.rs  main.rs  msal.rs  prefect.rs  publishers.rs
src/publishers/: azure_storage_queue.rs  stdin.rs  zeromq.rs
