[package]
name = "prefect-event-handler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.77"
azure_core = "0.19.0"
azure_identity = "0.19.0"
azure_security_keyvault = "0.19.0"
azure_storage = "0.19.0"
azure_storage_queues = "0.19.0"
env_logger = "0.11.1"
log = "0.4.20"
reqwest = {version = "0.11.24", features = ["json"]}
serde = "1.0.196"
serde_json = "1.0.113"
tokio = {version = "1.35.1", features = ["rt-multi-thread", "macros", "io-std"]}
