[package]
name = "prefect-event-handler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["azure_storage_queues"]
azure_storage_queues = [
    "dep:azure_core", 
    "dep:azure_identity", 
    "dep:azure_storage", 
    "dep:azure_storage_queues",
    "dep:azure_security_keyvault"
]
# zmq = ["dep:tokio-zmq"]s

[dependencies]
async-trait = "0.1.77"
azure_core = {version = "0.19.0", optional = true}
azure_identity = {version = "0.19.0", optional = true}
azure_security_keyvault = { version = "0.19.0", optional = true }
azure_storage = {version = "0.19.0", optional = true}
azure_storage_queues = {version = "0.19.0", optional = true}
futures = "0.3.30"
reqwest = {version = "0.11.24", features = ["json"]}
serde = {version = "1.0.196", features=["derive"]}
serde_json = "1.0.113"
tmq = "0.4.0"
tokio = {version = "1.35.1", features = ["rt-multi-thread", "macros", "io-std"]}
zmq = "0.10.0"

[dev-dependencies]
rand = "0.8.5"
